@@ -1,8 +1,2 @@
-https://www.logicbig.com/tutorials/misc/groovy/intellij.html
 
-VM Option: --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
-
-Need to add dependencies
-C:\Program Files (x86)\Groovy\lib\extras-jaxb
-
-https://groovy-lang.org/gdk.html
+docker run -it --rm groovy
